hdparm-6.3
	- added reporting of ATA revision numbers > 7
hdparm-6.2
	- eliminated short form (-F) of --security-freeze flag
	- completely revamped ATA Security Commands
	   (now they actually work sometimes)
	   courtesy of Leonard den Ottolander (a BIG thank-you!)
hdparm-6.1
	- fix BLKGETSIZE bug introduced in 6.0
	- man page clarification for -M (courtesy Stephen Gran)
hdparm-6.0
	- correct usage of BLKGETSIZE64 (returns bytes instead of sectors)
	- Added ATA Security switches (Benjamin Benz bbe[AT]heise[DOT]de)
hdparm-5.9
	- fix security-mode display (Franz Lehner)
	- fixed -W bug (Stephan Gran)
hdparm-5.8
	- added HDIO_SET_WCACHE support to -W
	- fixed double byteswap for big endian
	- fixed %lld warnings on 64-bit architectures
	- "hdparm -h" now goes to stdout instead of stderr
hdparm-5.7
	- fixed output of NULs in -I string fields
	- fixed big-endian -I crashes from 5.6
	- removed remains of defunct major-number checks
	- added support for BLKGETSIZE64 ioctl internally
	- added --direct flag to use O_DIRECT on device open
	- renamed -Istdin  to --Istdin
	- renamed -Istdout to --Istdout
	- allow other flags to follow any of: -I, --Istdin, --Istdout
hdparm-5.6
	- fixed reversed device names in idectl script
	- renamed readahead variables to avoid new glibc conflicts
	- added -Istdout flag to dump IDENTIFY data as hex
	- removed MAJOR number checks to open up hdpar for SATA-SCSI drivers
hdparm-5.5
	- added limited support for SCSI(-controlled) CDROM/optical drives
	- incorporated various -I clean-up patches from Maciej W. Rozycki
	- removed wordswap from capacity calculation: latest kenels already do it
	- fixed slight issues with ATA Revision display
	- added debian scripts from Stephan Gran
hdparm-5.4
	- fixed 2.5.67 compile error (LVM_BLK_MAJOR)
	- first attempt to support BIG_ENDIAN in identify.c
	- converted -T and -t to use minimum timing intervals (2 and 3 seconds)
	- fix device size overflow issue with -t