@@ -4,11 +4,11 @@
 DESTDIR =
 
 binprefix = /
-manprefix = /usr
+manprefix = /usr/
 exec_prefix = $(binprefix)
-sbindir = $(exec_prefix)/sbin
-mandir = $(manprefix)/share/man
-oldmandir = $(manprefix)/man
+sbindir = $(exec_prefix)sbin
+mandir = $(manprefix)share/man
+oldmandir = $(manprefix)man
 
 ifndef CC
 CC = gcc
@@ -19,6 +19,7 @@ CFLAGS := -O2 -W -Wall -Wbad-function-cast -Wcast-align -Wpointer-arith -Wcast-q
 LDFLAGS = -s
 INSTALL = install
 INSTALL_DATA = $(INSTALL) -m 644
+INSTALL_DIR = $(INSTALL) -m 755 -d
 INSTALL_PROGRAM = $(INSTALL)
 
 all: hdparm
@@ -27,6 +28,10 @@ hdparm: hdparm.o identify.o hdparm.h
 	$(CC) $(LDFLAGS) -o hdparm hdparm.o identify.o
  
 install: all hdparm.8
+	if [ ! -z $(DESTDIR) ]; then $(INSTALL_DIR) $(DESTDIR) ; fi
+	if [ ! -z $(DESTDIR)$(sbindir) ]; then $(INSTALL_DIR) $(DESTDIR)$(sbindir) ; fi
+	if [ ! -z $(DESTDIR)$(mandir) ]; then $(INSTALL_DIR) $(DESTDIR)$(mandir) ; fi
+	if [ ! -z $(DESTDIR)$(mandir)/man8/ ]; then $(INSTALL_DIR) $(DESTDIR)$(mandir)/man8/ ; fi
 	if [ -f $(DESTDIR)$(sbindir)/hdparm ]; then rm -f $(DESTDIR)$(sbindir)/hdparm ; fi
 	if [ -f $(DESTDIR)$(mandir)/man8/hdparm.8 ]; then rm -f $(DESTDIR)$(mandir)/man8/hdparm.8 ;\
 	elif [ -f $(DESTDIR)$(oldmandir)/man8/hdparm.8 ]; then rm -f $(DESTDIR)$(oldmandir)/man8/hdparm.8 ; fi
